--- a/abacusplus/sass/style.scss
+++ b/abacusplus/sass/style.scss
@@ -107,3 +107,5 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 
 /* Website SCSS
 --------------------------------------------- */
+
+@import "website/homepage";
