--- a/abacusplus/css/acfstyles.css
+++ b/abacusplus/css/acfstyles.css
@@ -23,7 +23,10 @@ a {
   text-decoration: none;
   color: white; }
 
-a:visited, a:hover, a:focus, a:focus-visible {
+a:visited,
+a:hover,
+a:focus,
+a:focus-visible {
   outline: 0; }
 
 /* GENERAL-MENUS 
@@ -56,7 +59,8 @@ input[type="week"],
 input[type="time"],
 input[type="datetime"],
 input[type="datetime-local"],
-input[type="color"], textarea {
+input[type="color"],
+textarea {
   border-radius: var(--fields-border-radius);
   font-size: var(--fields-font-size);
   border-width: var(--fields-border-width);
@@ -81,7 +85,8 @@ input[type="color"], textarea {
   input[type="time"]::placeholder,
   input[type="datetime"]::placeholder,
   input[type="datetime-local"]::placeholder,
-  input[type="color"]::placeholder, textarea::placeholder {
+  input[type="color"]::placeholder,
+  textarea::placeholder {
     color: var(--primary-color-500); }
 
 /* FIELDS-FOCUSVISIBLE
@@ -100,7 +105,8 @@ input[type="week"]:focus-visible,
 input[type="time"]:focus-visible,
 input[type="datetime"]:focus-visible,
 input[type="datetime-local"]:focus-visible,
-input[type="color"]:focus-visible, textarea:focus-visible {
+input[type="color"]:focus-visible,
+textarea:focus-visible {
   outline: 0;
   border-color: var(--primary-color-700);
   box-shadow: 0px 0px 2px 4px #3648704a; }
@@ -116,29 +122,32 @@ input[type="color"]:focus-visible, textarea:focus-visible {
 /* FONTS-PARAGRAPHS & CAPTIONS
 ------------------------------------------------------- */
 p {
-  margin: 0; }
+  margin: 0;
+  font-size: var(--paragraph);
+  line-height: var(--paragraph-line-height);
+  font-family: var(--primary-font); }
 
 .p-small {
   margin: 0;
   font-size: .875rem;
   line-height: var(--paragraph-line-height);
-  font-family: var(--secondary-font); }
+  font-family: var(--primary-font); }
 
 .p-normal {
   margin: 0;
   font-size: var(--paragraph);
   line-height: var(--paragraph-line-height);
-  font-family: var(--secondary-font); }
+  font-family: var(--primary-font); }
 
 .p-big {
   margin: 0;
   font-size: 1.25rem;
   line-height: var(--paragraph-line-height);
-  font-family: var(--secondary-font); }
+  font-family: var(--primary-font); }
 
 .caption {
   font-size: var(--caption);
-  font-family: var(--secondary-font);
+  font-family: var(--primary-font);
   line-height: .875rem;
   margin: 0;
   line-height: var(--caption-line-height); }
@@ -174,7 +183,12 @@ p {
 
 /* FONTS-HEADINGS
 ------------------------------------------------------- */
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-family: var(--primary-font);
   margin: 0; }
 
@@ -337,41 +351,37 @@ h6 {
   justify-content: center;
   align-items: center;
   border-radius: var(--border-radius-pb);
-  background: #FFF;
-  box-shadow: 8px 6px 0px 0px #EF4136;
+  background: var(--primary-color-500);
   text-decoration: none;
-  border: 0;
+  border: 2px solid #000000;
   line-height: normal;
   font-style: normal;
-  font-weight: 500;
+  font-weight: 700;
   font-family: var(--primary-font);
   color: black;
-  transition: var(--transition); }
+  transition: var(--transition);
+  letter-spacing: 0.01em; }
 
 .primary-button:hover {
-  color: #EF4136;
-  box-shadow: 4px 4px 0px 0px #EF4136; }
+  box-shadow: 2px 2px 0px 0px #000000; }
 
 .secondary-button {
+  letter-spacing: 0.01em;
   display: flex;
-  padding: 16px 32px;
   justify-content: center;
-  color: white;
+  color: black;
   align-items: center;
-  border-radius: 6px;
-  background: #EF4136;
-  box-shadow: 8px 6px 0px 0px white;
+  border-radius: var(--border-radius-pb);
+  background: white;
   text-decoration: none;
-  border: 0;
+  border: 2px solid #000000;
   line-height: normal;
-  font-size: 1.125rem;
   font-style: normal;
-  font-weight: 500;
+  font-weight: 700;
   font-family: var(--primary-font);
   transition: var(--transition); }
   .secondary-button:hover {
-    color: black;
-    box-shadow: 4px 4px 0px 0px white; }
+    box-shadow: 2px 2px 0px 0px #000000; }
 
 .small {
   padding: var(--padding-small);
@@ -386,8 +396,7 @@ h6 {
   font-size: var(--font-size-lg); }
 
 .icon-right::after {
-  content: var(--btn-icon);
-  height: 20px; }
+  content: var(--btn-icon); }
 
 .only-icon {
   height: fit-content; }
