--- a/abacusplus/style.css
+++ b/abacusplus/style.css
@@ -1696,4 +1696,301 @@ h6 {
 	right: -77px;
 }
 
+.projects {
+	padding: 150px 0px;
+}
+
+.projects__wrapper {
+	display: flex;
+	gap: 32px;
+	align-items: center;
+}
+
+.projects__content {
+	display: flex;
+	flex-direction: column;
+	width: 40%;
+	gap: 32px;
+	align-items: flex-start;
+}
+
+.projects__content .greenword {
+	background: linear-gradient(to right, #55D087 95.6%, transparent 90%);
+	display: inline-block;
+}
+
+.projects__images-wrapper {
+	display: flex;
+	width: 60%;
+	gap: 30px;
+	margin-top: 140px;
+}
+
+.projects__image-item {
+	position: relative;
+	border: 2px solid black;
+	border-radius: 8px;
+	background-size: cover;
+	width: 100%;
+	height: 560px;
+	background-position: center;
+	background-position-y: -480px;
+}
+
+.projects__image-item:nth-child(2) {
+	margin-top: 70px;
+}
+
+.projects__image-thumbnail {
+	object-fit: cover;
+	width: 100%;
+	height: 100%;
+}
+
+.projects__image-title {
+	position: absolute;
+	top: 0;
+	padding: 32px;
+}
+
+.faq {
+	background-color: var(--primary-color-500);
+	padding: 150px 0px;
+}
+
+.faq__titlebutton {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	margin-bottom: 80px;
+	margin-top: 24px;
+}
+
+.faq__wrapper {
+	display: flex;
+	gap: 80px;
+}
+
+.faq__questions {
+	flex: 1;
+}
+
+.faq__question {
+	padding: 32px 20px;
+	position: relative;
+	transition: padding-left 0.5s ease-in-out;
+}
+
+.faq__question:hover {
+	padding-left: 35px;
+}
+
+.faq__question-wrapper {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	border-bottom: 2px solid black;
+	transition: padding-right 0.5s ease-in-out;
+}
+
+.faq__question-wrapper:hover {
+	padding-right: 12px;
+}
+
+.faq__question-wrapper:focus {
+	padding-right: 12px;
+	background-color: #FFC093;
+}
+
+.faq__answers {
+	flex: 1;
+}
+
+.testimonials {
+	padding: 150px 0px;
+	background: url(/wp-content/uploads/2024/10/Bg-Grid.svg);
+	background-size: cover;
+}
+
+.testimonials__title {
+	gap: 24px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	margin-bottom: 80px;
+}
+
+.testimonials__logos-wrapper {
+	margin-bottom: 40px;
+}
+
+.testimonials__content {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+}
+
+.testimonials__authorwrapper {
+	display: flex;
+	gap: 20px;
+}
+
+.testimonials__image {
+	border: 1px solid black;
+	border-radius: 50%;
+	height: 46px;
+	width: 46px;
+}
+
+.testimonials__images {
+	max-width: 132px;
+	max-height: 43px;
+}
+
+.testimonials__insidewrapper {
+	display: flex;
+	gap: 8px;
+	flex-direction: column;
+}
+
+.testimonials__card {
+	padding: 32px;
+	height: 400px;
+	display: flex !important;
+	flex-direction: column;
+	justify-content: space-between;
+	background-color: #FFD037;
+	border-radius: 8px;
+	border: 2px solid black;
+	box-shadow: 2px 2px 0px 0px #000000;
+	margin-right: 20px;
+}
+
+.testimonials__arrows {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin-top: 40px;
+	gap: 50px;
+}
+
+.testimonials__arrow {
+	background-color: white;
+	border: 2px solid black;
+	box-shadow: 2px 2px 0px 0px #000000;
+}
+
+.testimonials__arrow:hover {
+	background-color: var(--primary-color-500);
+	box-shadow: 5px 6px 0px 0px #000000;
+	border: 2px solid black;
+}
+
+.testimonials__arrow:focus {
+	background-color: var(--primary-color-700);
+	box-shadow: 2px 2px 0px 0px #000000;
+	border: 2px solid black;
+}
+
+.testimonials .slick-prev,
+.testimonials .slick-next {
+	display: none !important;
+}
+
+.cards {
+	padding: 150px 0px;
+	background-color: #E3E3FF;
+}
+
+.cards__title {
+	margin-top: 24px;
+}
+
+.cards .greenword {
+	background: linear-gradient(to right, #55D087 90%, transparent 90%);
+	display: inline-block;
+}
+
+.cards .redword {
+	background: linear-gradient(to right, var(--primary-color-500) 92%, transparent 90%);
+	display: inline-block;
+}
+
+.cards .orangeword {
+	background: linear-gradient(to right, var(--primary-color-500) 96.6%, transparent 90%);
+	display: inline-block;
+}
+
+.cards__content {
+	background-color: white;
+	border-radius: 8px;
+	padding: 40px 60px;
+	box-shadow: 10px 12px 0px 0px #000000;
+	display: flex;
+	flex-direction: column;
+	gap: 60px;
+	align-items: flex-end;
+	max-width: 930px;
+}
+
+.cards__wrapper {
+	margin-top: 70px;
+	display: flex;
+	flex-direction: column;
+	gap: 120px;
+	position: relative;
+}
+
+.cards__wrapper .cards__insidewrapper:nth-child(1) {
+	transform: rotate(-5deg);
+}
+
+.cards__wrapper .cards__insidewrapper:nth-child(1)::after {
+	background: url("/wp-content/uploads/2024/10/Line-Arrow-18.svg");
+	background-repeat: no-repeat;
+	background-size: cover;
+	position: absolute;
+	right: 0;
+	content: "";
+	width: 121px;
+	height: 372px;
+	top: 38%;
+}
+
+.cards__wrapper .cards__insidewrapper:nth-child(2) {
+	display: flex;
+	align-self: end;
+}
+
+.cards__wrapper .cards__insidewrapper:nth-child(2)::before {
+	content: "";
+	background: url("/wp-content/uploads/2024/10/Shape.svg");
+	background-repeat: no-repeat;
+	background-size: cover;
+	position: absolute;
+	left: -10%;
+	width: 454px;
+	height: 426px;
+}
+
+.cards__wrapper .cards__insidewrapper:nth-child(3) {
+	transform: rotate(-5deg);
+	display: flex;
+	justify-content: center;
+	width: 100%;
+}
+
+.cards__wrapper .cards__insidewrapper:nth-child(3)::after {
+	background: url("/wp-content/uploads/2024/10/Line-Arrow-12.svg");
+	background-repeat: no-repeat;
+	background-size: cover;
+	position: absolute;
+	right: -10%;
+	content: "";
+	width: 239px;
+	height: 221px;
+	top: 38%;
+}
+
 /*# sourceMappingURL=style.css.map */
